--- a/pages/about.html
+++ b/pages/about.html
@@ -59,20 +59,15 @@
           <img src="../img/about_2.png" alt="The Outside">
         </div>
         <div class="main_post_content">
-          <h3 class="main_post_content_excerption">
-
-            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna
-            aliqua.”</h3>
+          <h3 class="main_post_content_excerption"> “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.”</h3>
 
           <p class="main_article_content_text">
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-            aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-            ipsam
+            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            Nemo enim ipsam
             voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-            ratione
-            voluptatem sequi nesciunt.
+            ratione voluptatem sequi nesciunt.
           </p>
         </div>
       </div>
@@ -80,27 +75,21 @@
       <h2 class="main_about_title">Lorem ipsum dolor sit amet, consectetur adipiscing... </h2>
 
       <div class="main_block-foto">
-        <img src="../img/block-1.png" alt="">
-        <img src="../img/block-2.png" alt="">
+        <img src="../img/block-1.png" alt="Post-foto">
+        <img src="../img/block-2.png" alt="Post-foto">
       </div>
       <div class="main_block-foto-title">
         <div class="main_block-foto-title_img">
-          <img src="../img/block-3.png" alt="">
+          <img src="../img/block-3.png" alt="Post-foto">
         </div>
         <div class="main_block-foto-title_post">
-
-
-          <h3 class="main_post_content_excerption">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua.
+          <h3 class="main_post_content_excerption"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </h3>
         </div>
         <div class="main_block-foto-title_img_r">
-          <img src="../img/block-4.png" alt="">
+          <img src="../img/block-4.png" alt="Post-foto">
         </div>
-
-
       </div>
 
       <div class="main_contact_about">
@@ -114,7 +103,6 @@
               <li>
                 <p class="main_article_content_text"> info@theglasshuts.com</p>
               </li>
-
             </ul>
             <div class="main_contact_social">
               <a href="#"> <img src="../img/contact/instagram.svg" alt="Instagram"></a>
@@ -122,8 +110,6 @@
               <a href="#"> <img src="../img/contact/twitter.svg" alt="Twitter"></a>
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
@@ -139,7 +125,6 @@
             <li><a href="/terms-and-conditions">TERMS AND CONDITIONS</a></li>
             <li><a href="/cencellation-policy">CENCELLATION POLICY</a></li>
             <li><a href="/privecy-policy">PRIVACY POLICY</a></li>
-
           </ul>
         </div>
       </div>
@@ -153,12 +138,10 @@
               <img src="../img/email-adress_button.svg" alt="Adrdess-button">
             </button>
           </form>
-
         </div>
         <div class="footer_email-pay_pay">
           <img src="../img/pay.svg" alt="pay">
         </div>
-
       </div>
 
       <div class="footer_email-pay_title">
