--- a/pages/faq.html
+++ b/pages/faq.html
@@ -42,7 +42,7 @@
         <div class="main_faq-question">
           <input id="q1" type="checkbox" class="panel">
           <div class="arrow">
-            <img src="../img/faq.svg" alt="">
+            <img src="../img/faq.svg" alt="arrow">
           </div>
           <label for="q1" class="panel-title">PRICES</label>
           <div class="panel-content">prices </div>
@@ -53,17 +53,14 @@
             <p class="main_faq-content_text_title">CANCELLATION POLICY</p>
             <p class="main_faq-content_text_text">Cancellation four weeks prior = 100% refund </p>
             <p class="main_faq-content_text_text"> Cancellation two weeks prior = 50% refund </p>
-
             <p class="main_faq-content_text_text"> Cancellation later than two weeks = full payment</p>
           </div>
         </div>
 
-
-
         <div class="main_faq-question">
           <input id="q2" type="checkbox" class="panel">
           <div class="arrow">
-            <img src="../img/faq.svg" alt="">
+            <img src="../img/faq.svg" alt="arrow">
           </div>
           <label for="q2" class="panel-title">THE WALK UP TO GLASS HUT</label>
           <div class="panel-content">the walk up to glass hut</div>
@@ -72,17 +69,16 @@
         <div class="main_faq-question">
           <input id="q3" type="checkbox" class="panel">
           <div class="arrow">
-            <img src="../img/faq.svg" alt="">
+            <img src="../img/faq.svg" alt="arrow">
           </div>
           <label for="q3" class="panel-title">CAPACITY</label>
           <div class="panel-content"> capacity
-            <!-- <a href="https://en.wikipedia.org/wiki/The_Unanswered_Question" target="_blank">unanswered</a> -->
           </div>
         </div>
         <div class="main_faq-question">
           <input id="q4" type="checkbox" class="panel">
           <div class="arrow">
-            <img src="../img/faq.svg" alt="">
+            <img src="../img/faq.svg" alt="arrow">
           </div>
           <label for="q4" class="panel-title">PETS</label>
           <div class="panel-content">pets</div>
@@ -91,7 +87,7 @@
         <div class="main_faq-question">
           <input id="q5" type="checkbox" class="panel">
           <div class="arrow">
-            <img src="../img/faq.svg" alt="">
+            <img src="../img/faq.svg" alt="arrow">
           </div>
           <label for="q5" class="panel-title"> CHECK-IN / CHECK-OUT</label>
           <div class="panel-content">check-in/ check-out</div>
@@ -110,11 +106,9 @@
               <li><a href="/terms-and-conditions">TERMS AND CONDITIONS</a></li>
               <li><a href="/cencellation-policy">CENCELLATION POLICY</a></li>
               <li><a href="/privecy-policy">PRIVACY POLICY</a></li>
-
             </ul>
           </div>
         </div>
-
 
         <div class="footer_email-pay">
           <div class="footer_email-pay_email">
@@ -124,20 +118,16 @@
                 <img src="../img/email-adress_button.svg" alt="Adrdess-button">
               </button>
             </form>
-
           </div>
           <div class="footer_email-pay_pay">
             <img src="../img/pay.svg" alt="pay">
           </div>
-
         </div>
-
         <div class="footer_email-pay_title">
           <p class="footer_email-pay_text">
             Sign up to our newsletter for special things and receive 10% off your next order.
           </p>
         </div>
-
         <div class="footer_link">
           <p class="footer_link_text">
             © 2021 The Glass Huts
