--- a/pages/area.html
+++ b/pages/area.html
@@ -52,7 +52,6 @@
             <span class="main_button_text"> GET DIRECTIONS</span>
           </button>
         </div>
-
       </div>
 
       <div class="main_post">
@@ -68,10 +67,9 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing...</h3>
           <p class="main_article_content_text">
             Løvtag's three exclusive and comfortable cabins, Et, Ro and Ly, are designed by architect Sigurd Larsen.
-            They all have
-            an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor shower. On the
-            roof,
-            surrounded by treetops, there is a terrace, which is about nine meters above ground.
+            They all have an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor
+            shower. On the
+            roof, surrounded by treetops, there is a terrace, which is about nine meters above ground.
           </p>
         </div>
       </div>
@@ -82,8 +80,6 @@
           </h2>
         </div>
         <div class="main_map_area">
-
-
           <img src="../img/area_map.png" alt="map">
         </div>
       </div>
@@ -104,10 +100,9 @@
           </div>
           <p class="main_article_content_text">
             Løvtag's three exclusive and comfortable cabins, Et, Ro and Ly, are designed by architect Sigurd Larsen.
-            They all have
-            an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor shower. On the
-            roof,
-            surrounded by treetops, there is a terrace, which is about nine meters above ground.
+            They all have an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor
+            shower. On the
+            roof, surrounded by treetops, there is a terrace, which is about nine meters above ground.
           </p>
         </div>
       </div>
@@ -120,16 +115,14 @@
           <div class="main_post_content_link">
             <a href="#">Lorem Impus</a>
             <a href="#">Lorem Impus</a>
-
           </div>
           <p class="main_article_content_text">
             Løvtag's three exclusive and comfortable cabins, Et, Ro and Ly, are designed by architect Sigurd Larsen.
-            They all have
-            an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor shower. On the
-            roof,
-            surrounded by treetops, there is a terrace, which is about nine meters above ground. The cottages are built
-            around tall,
-            old trees that go through the entire cottage from floor to ceiling.
+            They all have an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor
+            shower. On the
+            roof, surrounded by treetops, there is a terrace, which is about nine meters above ground. The cottages are
+            built
+            around tall, old trees that go through the entire cottage from floor to ceiling.
           </p>
         </div>
         <div class="main_map_screen">
@@ -151,10 +144,9 @@
           </div>
           <p class="main_article_content_text">
             Løvtag's three exclusive and comfortable cabins, Et, Ro and Ly, are designed by architect Sigurd Larsen.
-            They all have
-            an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor shower. On the
-            roof,
-            surrounded by treetops, there is a terrace, which is about nine meters above ground.
+            They all have an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor
+            shower. On the
+            roof, surrounded by treetops, there is a terrace, which is about nine meters above ground.
           </p>
         </div>
       </div>
@@ -171,24 +163,20 @@
           </div>
           <p class="main_article_content_text">
             Løvtag's three exclusive and comfortable cabins, Et, Ro and Ly, are designed by architect Sigurd Larsen.
-            They all have
-            an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor shower. On the
-            roof,
-            surrounded by treetops, there is a terrace, which is about nine meters above ground. The cottages are
-            built around tall,
-            old trees that go through the entire cottage from floor to ceiling.
+            They all have an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor
+            shower. On the
+            roof, surrounded by treetops, there is a terrace, which is about nine meters above ground. The cottages are
+            built around tall, old trees that go through the entire cottage from floor to ceiling.
           </p>
         </div>
         <div class="main_map_screen">
           <img src="../img/area_charm.png" alt="Small-town charm">
         </div>
       </div>
-
       <img src="../img/area_map_we.png" alt="ma">
     </div>
 
     <footer class="footer">
-      <!-- <div class="footer"> -->
       <div class="footer_news">
         <div class="footer_news_title">
           <p>Newsletter</p>
@@ -198,11 +186,9 @@
             <li><a href="/terms-and-conditions">TERMS AND CONDITIONS</a></li>
             <li><a href="/cencellation-policy">CENCELLATION POLICY</a></li>
             <li><a href="/privecy-policy">PRIVACY POLICY</a></li>
-
           </ul>
         </div>
       </div>
-
 
       <div class="footer_email-pay">
         <div class="footer_email-pay_email">
@@ -212,14 +198,11 @@
               <img src="../img/email-adress_button.svg" alt="Adrdess-button">
             </button>
           </form>
-
         </div>
         <div class="footer_email-pay_pay">
           <img src="../img/pay.svg" alt="pay">
         </div>
-
       </div>
-
       <div class="footer_email-pay_title">
         <p class="footer_email-pay_text">
           Sign up to our newsletter for special things and receive 10% off your next order.
@@ -231,7 +214,6 @@
           © 2021 The Glass Huts
         </p>
       </div>
-      <!-- </div> -->
     </footer>
   </div>
 </body>
